--- a/chen-library-ui/package.json
+++ b/chen-library-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chen-doc-web",
+  "name": "chen-libary-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^2.7.7",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.4.0"
   },
@@ -19,7 +21,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.77.8",
+    "sass-loader": "^14.2.1"
   },
   "eslintConfig": {
     "root": true,
