--- a/chen-library-ui/package.json
+++ b/chen-library-ui/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-plus": "^2.7.7",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.4.0"
