feat:完成后端服务框架初始化

--- a/chen-library-api/pom.xml
+++ b/chen-library-api/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>chen-doc</artifactId>
-        <groupId>com.codechen.doc</groupId>
+        <artifactId>chen-library</artifactId>
+        <groupId>com.codechen.library</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>chen-doc-core</artifactId>
+    <artifactId>chen-library-serve-api</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -18,8 +18,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.codechen.library</groupId>
+            <artifactId>chen-library-serve-framework</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
